# chatos_rs

./: .dockerignore  .drone.images.yml  .drone.verify-scan.yml  .drone.yml  .env.example  .gitattributes  .gitignore  3D_CHAT_HOME_REDESIGN_PLAN.md  AGENT_CONTEXT_FLOW_2026-04-03.md  AI_MODEL_PROVIDER_SELECTION_PLAN_20260603.md  ARCHITECTURE_OPTIMIZATION_PLAN_2026-05-13.md  AUTH_LOGIN_REGISTER_PLAN.md  BUILTIN_MCP_DYNAMIC_PROMPT_PLAN.md  BUILTIN_MCP_PROMPT.en-US.md  BUILTIN_MCP_PROMPT.md  BUILTIN_MCP_PROMPT.zh-CN.md  BUILTIN_REMOTE_MCP_PLAN.md  CHATOS_CONTEXT_FLOW_2026-04-03.md  CHATOS_MESSAGE_TASK_DRAWER_PLAN.md  CHATOS_PLAN_MODE_TASK_RUNNER_INTEGRATION_PLAN.zh-CN.md  CHATOS_REQUIREMENT_EXECUTION_SIMPLE_PLAN.zh-CN.md  CHATOS_TASK_RUNNER_ASYNC_CONVERSATION_PLAN.md  CHATOS_TASK_RUNNER_ONLY_MIGRATION_PLAN.md  CHATOS_UNIFIED_USER_SERVICE_PLAN_20260619.md  CHATOS_UNIFIED_USER_SERVICE_STATUS_20260619.md  CHAT_APP_CHATOS_SERVER_REMEDIATION_PLAN_20260602.md  CLIENT_LOCAL_PROJECT_E2E_TEST_PLAN.md  CLOUD_CLIENT_FULL_E2E_TEST_PLAN.md  CLOUD_CLIENT_UNIFIED_COMPLEX_E2E_REQUIREMENT.md  CLOUD_PROJECT_HARNESS_IMPORT_PLAN.zh-CN.md  CODEBASE_REFACTOR_IMPLEMENTATION_PLAN.zh-CN.md  CODEBASE_REVIEW_REFACTOR_PLAN_2026-04-08.md  CODEX_PLUGIN_1_TO_1_PARITY_IMPLEMENTATION_PLAN.zh-CN.md  CODE_QUALITY_REFACTOR_IMPLEMENTATION_PLAN.md  COMPACT_HISTORY_PAGINATION_FIX_PLAN_2026-05-14.md  CONFIG_CENTER_MICROSERVICE_IMPLEMENTATION_PLAN.zh-CN.md  CONTACT_SCOPE_GUIDANCE_PLAN_2026-04-07.md  CONTACT_TASK_MCP_REFACTOR_PLAN_2026-04-02.md  CONTACT_TASK_SERVICE_STANDARD_API_PLAN_2026-04-01.md  CONTACT_WS_ASYNC_AGENT_PLAN_2026-04-01.md  (+153 more)
agent/: Cargo.toml
agent/src/: catalog.rs  config.rs  lib.rs
agent/src/core/: definition.rs  error.rs  executor.rs  managed_prompt.rs  mod.rs
agent/src/implementations/: chatos.rs  command_approval.rs  memory_engine.rs  mod.rs  project_environment.rs  task_runner.rs
chat_app_server_rs/: .env.example  Cargo.toml  README.en.md  README.zh-CN.md  backend_refactor_plan.md  base64
chat_app_server_rs/config/: database.json  task_capability_registry.json
chat_app_server_rs/config/prompts/: contact_chat_task_planning.md
chat_app_server_rs/data/: chat_app.db
chat_app_server_rs/logs/: error.log.2026-02-07  error.log.2026-02-08  server.log.2026-02-07  server.log.2026-02-08
chat_app_server_rs/scripts/code_nav/: typescript_language_service.cjs
chat_app_server_rs/src/: config.rs  lib.rs  logger.rs  main.rs  shared_runtime.rs
chat_app_server_rs/src/api/: agent_builder.rs  agent_chat.rs  agents.rs  agents_v3.rs  applications.rs  ask_user_prompts.rs  auth.rs  chat_agent_v2.rs  chat_stream_common.rs  chat_v2.rs  chat_v3.rs  code_nav.rs  configs.rs  contacts.rs  conversation_semantics.rs  fs.rs  git.rs  im.rs  local_connectors.rs  memory_agents.rs  memory_compat.rs  memory_mappings.rs  message_task_runner.rs  messages.rs  mod.rs  notepad.rs  projects.rs  realtime.rs  remote_connections.rs  session_summary_job_config.rs  sessions.rs  system_contexts.rs  task_manager.rs  task_runner_external_mcp.rs  terminals.rs  ui_prompts.rs  user_settings.rs
chat_app_server_rs/src/builtin/: browser_page_insights.rs  browser_page_state_view.rs  mod.rs  research_findings.rs  research_output.rs  research_payloads.rs  research_summary.rs  research_summary_view.rs
chat_app_server_rs/src/core/: agent_access.rs  agent_runtime.rs  ai_model_access.rs  ai_model_config.rs  ai_model_config_access.rs  ai_response.rs  ai_settings.rs  application_access.rs  async_bridge.rs  auth.rs  builtin_mcp_prompt.rs  chat_context.rs  chat_runtime.rs  chat_runtime_contact.rs  chat_runtime_metadata.rs  chat_runtime_project.rs  chat_stream.rs  internal_context_locale.rs  mcp_args.rs  mcp_config_access.rs  mcp_runtime.rs  mcp_tools.rs  messages.rs  mod.rs  mongo_cursor.rs  mongo_query.rs  pagination.rs  path_guard.rs  project_access.rs  remote_connection_access.rs  remote_connection_error_codes.rs  runtime_health.rs  secrets.rs  session_access.rs  sql_query.rs  sql_rows.rs  system_context_access.rs  terminal_access.rs  time.rs  tool_call.rs  (+9 more)
chat_app_server_rs/src/db/: factory.rs  mod.rs  mongodb.rs  sqlite.rs  sqlite_schema.rs  types.rs
chat_app_server_rs/src/models/: agent.rs  ai_model_config.rs  application.rs  chatos_agent_types.rs  mcp_config.rs  memory_compat.rs  memory_mapping.rs  memory_mapping_types.rs  memory_runtime_types.rs  memory_skill.rs  message.rs  mod.rs  project.rs  project_run.rs  project_run_environment.rs  remote_connection.rs  session.rs  session_mcp_server.rs  session_runtime_settings.rs  session_summary.rs  session_summary_job_config.rs  session_summary_message.rs  session_summary_v2.rs  sub_agent_run.rs  (+8 more)
chat_app_server_rs/tests/: shared_runtime_public.rs
chatos/backend/: .env.example  Cargo.toml  README.en.md  README.zh-CN.md
config_center_service/backend/: Cargo.toml
contact_task_service/backend/: Cargo.toml
crates/chatos_ai_runtime/: Cargo.toml
crates/chatos_builtin_tools/: Cargo.toml
crates/chatos_config_sdk/: Cargo.toml
crates/chatos_mcp_runtime/: Cargo.toml
crates/chatos_plugin_management_sdk/: Cargo.toml
crates/chatos_sandbox_image_mcp/: Cargo.toml
crates/chatos_service_runtime/: Cargo.toml
crates/chatos_terminal_runtime/: Cargo.toml
crates/memory_engine_sdk/: Cargo.toml
db_connection_hub/backend/: Cargo.toml  README.md
im_service/backend/: Cargo.toml
local_connector_client/core/: Cargo.toml
local_connector_service/backend/: Cargo.toml
mcp/: Cargo.toml
mcp/provider_skills/: project-environment.md  project-runtime-environment.md  task-runner-service.md
mcp/src/: backend.rs  catalog.rs  definition.rs  lib.rs  provider.rs  skills.rs  system_tool_catalog.rs  tool_catalog.rs
memory_engine/backend/: .env.example  Cargo.toml
memory_engine/sdk/: Cargo.toml  README.md
memory_server/backend/: .env.example  Cargo.toml
project_management_service/backend/: Cargo.toml
sandbox_manager_service/backend/: Cargo.toml
sandbox_manager_service/sandbox_mcp_server/: Cargo.toml
task_runner_service/backend/: Cargo.toml
user_service/backend/: .env.example  Cargo.toml
(+5853 files in other folders)
