# SPDX-License-Identifier: PolyForm-Noncommercial-1.0.0
# Required Notice: Copyright (c) 2025 AI Chat Team

[workspace]
members = [
  "chatos/backend",
  "crates/chatos_builtin_tools",
  "crates/chatos_ai_runtime",
  "crates/chatos_project_mcp_contract",
  "crates/memory_engine_sdk",
  "crates/chatos_mcp_runtime",
  "crates/chatos_mcp_service",
  "crates/chatos_sandbox_image_mcp",
  "crates/chatos_service_runtime",
  "crates/chatos_plugin_management_sdk",
  "task_runner_service/backend",
  "project_management_service/backend",
  "local_connector_service/backend",
  "local_connector_client/core",
  "plugin_management_service/backend",
  "official_website_service/backend",
  "sandbox_manager_service/backend",
  "sandbox_manager_service/sandbox_mcp_server"
]
exclude = [
  "memory_engine/backend"
]

resolver = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
