[package]
name = "chat_app_server_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "time", "json"] }
tracing-appender = "0.2"
tower-http = { version = "0.5", features = ["cors", "trace", "request-id"] }
reqwest = { version = "0.12", features = ["json", "stream", "gzip", "brotli", "deflate", "rustls-tls"] }
futures = "0.3"
tokio-stream = "0.1"
bytes = "1"
once_cell = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde", "clock"] }
thiserror = "1"
anyhow = "1"
tokio-util = "0.7"
parking_lot = "0.12"
url = "2"
urlencoding = "2"
zip = "0.6"
quick-xml = "0.31"
lopdf = "0.32"
sha2 = "0.10"
hex = "0.4"
walkdir = "2.4"
dirs = "5.0"
pathdiff = "0.2"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros", "chrono", "json"] }
mongodb = { version = "2.8", features = ["tokio-runtime"] }

[features]
pdf = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

