# SPDX-License-Identifier: PolyForm-Noncommercial-1.0.0
# Required Notice: Copyright (c) 2025 AI Chat Team

[package]
name = "chatos_mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde", "clock"] }
chatos_mcp_runtime = { path = "../crates/chatos_mcp_runtime" }
chatos_plugin_management_sdk = { path = "../crates/chatos_plugin_management_sdk" }
chatos_sandbox_contract = { path = "../crates/chatos_sandbox_contract" }
dirs = "6.0"
futures = "0.3"
hex = "0.4"
libc = "0.2"
lopdf = "0.44"
once_cell = "1"
parking_lot = "0.12"
pathdiff = "0.2"
regex = "1"
reqwest = { version = "0.12", features = ["json", "stream", "gzip", "brotli", "deflate", "rustls-tls"] }
scraper = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
tokio = { version = "1", features = ["process", "io-util", "macros", "rt", "rt-multi-thread", "time"] }
tracing = "0.1"
url = "2"
urlencoding = "2"
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2.4"

[features]
pdf = []
