# SPDX-License-Identifier: PolyForm-Noncommercial-1.0.0
# Required Notice: Copyright (c) 2025 AI Chat Team

[package]
name = "chat_app_server_rs"
version = "0.1.0"
edition = "2021"
default-run = "chat_app_server_rs"

[dependencies]
axum = { version = "0.8", features = ["json", "macros", "multipart", "ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "time", "json"] }
tracing-appender = "0.2"
tower-http = { version = "0.7", features = ["cors", "trace", "request-id"] }
reqwest = { version = "0.12", features = ["json", "multipart", "stream", "gzip", "brotli", "deflate", "rustls-tls"] }
futures = "0.3"
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.30", features = ["rustls-tls-webpki-roots"] }
bytes = "1"
once_cell = "1"
base64 = "0.22"
mime_guess = "2"
chrono = { version = "0.4", features = ["serde", "clock"] }
thiserror = "2"
anyhow = "1"
tokio-util = "0.7"
parking_lot = "0.12"
url = "2"
urlencoding = "2"
zip = "8.6"
quick-xml = "0.41"
lopdf = "0.44"
sha2 = "0.11"
hex = "0.4"
walkdir = "2.4"
dirs = "6.0"
pathdiff = "0.2"
portable-pty = "0.9"
dashmap = "6.2"
regex = "1"
async-recursion = "1"
async-trait = "0.1"
libc = "0.2"
argon2 = "0.5"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
rand = "0.10"
ssh2 = "0.9"
aes-gcm = "0.11"
scraper = "0.27"

# Database
sqlx = { version = "0.9", features = ["runtime-tokio", "sqlite", "macros", "chrono", "json"] }
mongodb = { version = "2.8", features = ["tokio-runtime"] }
memory_engine_sdk = { path = "../../crates/memory_engine_sdk" }
chatos_agent = { path = "../../agent" }
chatos_ai_runtime = { path = "../../crates/chatos_ai_runtime" }
chatos_builtin_tools = { path = "../../crates/chatos_builtin_tools" }
chatos_mcp_service = { path = "../../crates/chatos_mcp_service" }
chatos_mcp_runtime = { path = "../../crates/chatos_mcp_runtime" }
chatos_service_runtime = { path = "../../crates/chatos_service_runtime" }
chatos_plugin_management_sdk = { path = "../../crates/chatos_plugin_management_sdk" }

[features]
pdf = []
