# SPDX-License-Identifier: PolyForm-Noncommercial-1.0.0
# Required Notice: Copyright (c) 2025 AI Chat Team

[package]
name = "config_center_service_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["json"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
chatos_agent = { path = "../../agent", default-features = false }
chatos_config_sdk = { path = "../../crates/chatos_config_sdk" }
chatos_service_runtime = { path = "../../crates/chatos_service_runtime", features = ["axum-support"] }
futures-util = "0.3"
hex = "0.4"
mongodb = { version = "2.8", features = ["tokio-runtime"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.7", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v4"] }
