# SPDX-License-Identifier: PolyForm-Noncommercial-1.0.0
# Required Notice: Copyright (c) 2025 AI Chat Team

[package]
name = "chatos_mcp_runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
chatos_service_runtime = { path = "../chatos_service_runtime" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "macros", "rt", "sync", "time"] }
reqwest = { version = "0.12", features = ["json", "stream", "gzip", "brotli", "deflate", "rustls-tls"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
