[package]
name = "im_service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json", "macros", "ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
mongodb = "3"
futures-util = "0.3"
dotenvy = "0.15"
tower-http = { version = "0.5", features = ["cors", "trace"] }
sha2 = "0.10"
base64 = "0.22"
serde_path_to_error = "0.1"
