# SPDX-License-Identifier: PolyForm-Noncommercial-1.0.0
# Required Notice: Copyright (c) 2025 AI Chat Team

[package]
name = "local_connector_client_core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["json"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["clock", "serde"] }
chatos_agent = { path = "../../agent" }
chatos_ai_runtime = { path = "../../crates/chatos_ai_runtime" }
chatos_builtin_tools = { path = "../../crates/chatos_builtin_tools" }
chatos_mcp_runtime = { path = "../../crates/chatos_mcp_runtime" }
chatos_mcp_service = { path = "../../crates/chatos_mcp_service" }
chatos_plugin_management_sdk = { path = "../../crates/chatos_plugin_management_sdk" }
chatos_project_mcp_contract = { path = "../../crates/chatos_project_mcp_contract" }
chatos_sandbox_contract = { path = "../../crates/chatos_sandbox_contract" }
chatos_sandbox_image_mcp = { path = "../../crates/chatos_sandbox_image_mcp" }
dotenvy = "0.15"
futures-util = "0.3"
hex = "0.4"
hyper-util = { version = "0.1", features = ["http1", "server", "server-auto", "service", "tokio"] }
memory_engine_sdk = { path = "../../crates/memory_engine_sdk" }
lopdf = "0.44"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros", "chrono", "uuid", "json"] }
portable-pty = "0.9"
ring = "0.17"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tokio-tungstenite = { version = "0.30", features = ["rustls-tls-webpki-roots"] }
tower-http = { version = "0.7", features = ["cors", "fs"] }
url = "2"
urlencoding = "2"
uuid = { version = "1", features = ["serde", "v4"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Security", "Win32_Security_Authorization", "Win32_Security_Cryptography", "Win32_Storage_FileSystem", "Win32_System_JobObjects", "Win32_System_Memory", "Win32_System_SystemServices", "Win32_System_Threading"] }
