# SPDX-License-Identifier: PolyForm-Noncommercial-1.0.0
# Required Notice: Copyright (c) 2025 AI Chat Team

[package]
name = "local_connector_service_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["json", "ws"] }
chatos_service_runtime = { path = "../../crates/chatos_service_runtime" }
chatos_plugin_management_sdk = { path = "../../crates/chatos_plugin_management_sdk" }
chrono = { version = "0.4", features = ["clock", "serde"] }
dotenvy = "0.15"
futures = "0.3"
mongodb = { version = "2.8", features = ["tokio-runtime"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
base64 = "0.22"
ring = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v4"] }
