# SPDX-License-Identifier: PolyForm-Noncommercial-1.0.0
# Required Notice: Copyright (c) 2025 AI Chat Team

[package]
name = "local_connector_service_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["json", "ws"] }
chatos_agent = { path = "../../agent", default-features = false, features = ["managed-config"] }
chatos_config_sdk = { path = "../../crates/chatos_config_sdk" }
chatos_service_runtime = { path = "../../crates/chatos_service_runtime", features = ["axum-support"] }
chatos_plugin_management_sdk = { path = "../../crates/chatos_plugin_management_sdk" }
memory_engine_sdk = { path = "../../crates/memory_engine_sdk", default-features = false }
chatos_sandbox_contract = { path = "../../crates/chatos_sandbox_contract" }
chrono = { version = "0.4", features = ["clock", "serde"] }
futures = "0.3"
mongodb = { version = "2.8", features = ["tokio-runtime"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
base64 = "0.22"
hex = "0.4"
ring = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.7", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
