# SPDX-License-Identifier: PolyForm-Noncommercial-1.0.0
# Required Notice: Copyright (c) 2025 AI Chat Team

[package]
name = "memory_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["json", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
chatos_service_runtime = { path = "../../crates/chatos_service_runtime", features = ["axum-support"] }
memory_engine_sdk = { path = "../../crates/memory_engine_sdk", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
mongodb = "3"
tower-http = { version = "0.7", features = ["cors", "trace"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"
hex = "0.4"
sha2 = "0.11"
subtle = "2.6"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
