# SPDX-License-Identifier: PolyForm-Noncommercial-1.0.0
# Required Notice: Copyright (c) 2025 AI Chat Team

[package]
name = "project_management_service_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
axum = { version = "0.7", features = ["json", "multipart"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["clock", "serde"] }
chatos_agent = { path = "../../agent" }
chatos_ai_runtime = { path = "../../crates/chatos_ai_runtime" }
chatos_builtin_tools = { path = "../../crates/chatos_builtin_tools" }
chatos_mcp_service = { path = "../../crates/chatos_mcp_service" }
chatos_mcp_runtime = { path = "../../crates/chatos_mcp_runtime" }
chatos_project_mcp_contract = { path = "../../crates/chatos_project_mcp_contract" }
chatos_sandbox_image_mcp = { path = "../../crates/chatos_sandbox_image_mcp" }
chatos_service_runtime = { path = "../../crates/chatos_service_runtime" }
chatos_plugin_management_sdk = { path = "../../crates/chatos_plugin_management_sdk" }
dotenvy = "0.15"
futures-util = "0.3"
mongodb = { version = "2.8", features = ["tokio-runtime"] }
memory_engine_sdk = { path = "../../crates/memory_engine_sdk" }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.9", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
urlencoding = "2"
uuid = { version = "1", features = ["serde", "v4"] }
walkdir = "2"
zip = "2"
